LendingTree Lead Onboarding Automation/main/default/objects/Sms_Message__c/Sms_Message__c.object-meta.xml
<CustomObject>
    <label>SMS Message</label>
    <nameField>
        <label>Sms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>