LendingTree Lead Onboarding Automation/main/default/objects/Sms_Message__c/fields/Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Message_Id__c</fullName>
    <externalId>true</externalId>
    <label>Message Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>