LendingTree Lead Onboarding Automation/main/default/objects/Sms_Message__c/fields/Message_Status__c.field-meta.xml
<CustomField>
    <fullName>Message_Status__c</fullName>
    <label>Message Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>