LendingTree Lead Onboarding Automation/main/default/objects/Sms_Message__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <label>From Mobile Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>