LendingTree Lead Onboarding Automation/main/default/objects/Sms_Message__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SMS Messages</relationshipLabel>
    <relationshipName>SMS_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>