LendingTree Lead Onboarding Automation/main/default/objects/Sms_Message__c/fields/To_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>To_Mobile_Number__c</fullName>
    <label>To Mobile Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>